--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -28,3 +28,54 @@
     border-radius: 3px;
     background: #f1b866;
 }
+
+.buttonMain{
+    display: flex;
+    justify-content: center;
+    background: #ff851be6;
+    margin: 20px 0;
+    color: white;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background: red; */
+    /* width: 70%; */
+    /* height: 100px; */
+}
+
+.baconButton, .saladButton, .cheeseButton{
+    min-width: 350px;
+    /* width: 400px; */
+    height: 40px;
+    /* background: green; */
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.buttons p{
+    font-size: 22px;
+}
+
+.buttons h4{
+    margin: 30px 0;
+}
+
+.buttons button{
+    background: none;
+    border: 1px solid #fff;
+    color: #fff;
+    height: 35px;
+    width: 116px;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: 0.3s;
+}
+
+.buttons button:hover{
+    color:#ff851be6;
+    background: white;
+}
